fixed z-index

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,5 +9,5 @@ header {
 	right: 0;
 
 	background-color: var(--bgColor, #ccdadd);
-	z-index: 100;
+	z-index: 10;
 }
