--- a/src/components/pokemonfilter/PokemonFilter.css
+++ b/src/components/pokemonfilter/PokemonFilter.css
@@ -1,5 +1,5 @@
 .pokemonFilter {
-	background-color: #ccdadd;
+	background-color: var(--bgColor);
 	position: fixed;
 	width: 100vw;
 	top: 0;
@@ -8,7 +8,7 @@
 
 	animation: fly 0.3s ease-in-out;
 	overflow: hidden;
-	z-index: 10;
+	z-index: 30;
 	height: 100vh;
 	text-align: center;
 }
